# Capellini

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setup.py
capellini/: __init__.py  __main__.py  cli.py  config.py  fetch_references.py  pipeline.py
capellini/r_scripts/: DADA2_Pipe.R
capellini/stages/: dada2.py  mmseqs2.py  ncbi_mapping.py  network.py  preflight.py  procs.py  spacepharer.py
capellini/utils/: io.py  network_utils.py  taxonomy.py  transforms.py
docs/: Makefile  requirements.txt
docs/source/: api.rst  citation.rst  conf.py  configuration.rst  index.rst  installation.rst  pipeline.rst  quickstart.rst
